--- a/HanApp_Flutter/hanapp/web/index.html
+++ b/HanApp_Flutter/hanapp/web/index.html
@@ -26,6 +26,8 @@
   <meta name="apple-mobile-web-app-title" content="hanapp">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6WcpEZvWnvfQxA0HK_tV0FB9jSL9fj7Y"></script>
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
